# n-u

./: .env.example  docker-compose.yml  go.sum
cmd/workers/: main.go
docs/: architecture.md
internal/config/: config.go
internal/db/: postgres.go
internal/models/: events.go
internal/nats/: consumer.go
internal/workers/: cache_invalidator.go  notification.go
nginx/: nginx.conf
novel-api/: .env.example  .gitignore  Cargo.toml  Dockerfile
novel-api/migrations/: 001_initial.sql
novel-api/src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs
novel-api/src/db/: mod.rs
novel-api/src/events/: mod.rs  outbox.rs  publisher.rs
novel-api/src/middleware/: auth.rs  mod.rs  request_id.rs
novel-api/src/modules/: mod.rs
novel-api/src/modules/admin/: handlers.rs  models.rs  repository.rs  routes.rs
novel-api/src/modules/bookmarks/: handlers.rs  models.rs  repository.rs  routes.rs
novel-api/src/modules/chapters/: handlers.rs  models.rs  repository.rs  routes.rs
novel-api/src/modules/comments/: handlers.rs  models.rs  repository.rs  routes.rs
novel-api/src/modules/forums/: handlers.rs  models.rs  repository.rs  routes.rs
novel-api/src/modules/notifications/: handlers.rs  models.rs  repository.rs  routes.rs
novel-api/src/modules/novels/: handlers.rs  models.rs  repository.rs  routes.rs
novel-api/src/modules/reviews/: handlers.rs  mod.rs  models.rs  repository.rs  routes.rs
novel-api/src/modules/search/: handlers.rs  routes.rs
novel-api/src/modules/users/: handlers.rs  models.rs  repository.rs  routes.rs
novel-workers/: Dockerfile  go.mod
(+3 files in other folders)
